RESOLVED FIXED269921
[WGSL] Serialization of constant structs is not implemented
https://bugs.webkit.org/show_bug.cgi?id=269921
Summary [WGSL] Serialization of constant structs is not implemented
Tadeu Zagallo
Reported 2024-02-22 07:35:58 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-22 07:36:07 PST
Tadeu Zagallo
Comment 2 2024-02-22 07:44:25 PST
EWS
Comment 3 2024-02-23 05:24:57 PST
Committed 275234@main (ca4cb03cffc6): <https://commits.webkit.org/275234@main> Reviewed commits have been landed. Closing PR #24952 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.