[WGSL] Serialization of constant structs is not implemented https://bugs.webkit.org/show_bug.cgi?id=269921 rdar://123445698

Reviewed by Mike Wyrzykowski.

Constant structs were implemented in 275043@main, but serialization was missing.

* Source/WebGPU/WGSL/AST/ASTStructureMember.h:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::serializeConstant):

Canonical link: https://commits.webkit.org/275234@main